# macko_spmv

./: .gitignore  LICENSE  README.md  TECHNICAL_README.md  pyproject.toml
c_benchmarking/: benchmark.cu  run_tests.sh  run_tests_fp16.sh  run_tests_int8.sh  utils.cuh
c_benchmarking/results_16bit/NVIDIA_GeForce_RTX_2080_SUPER/: results.txt
c_benchmarking/results_16bit/NVIDIA_GeForce_RTX_3090/: results.txt
c_benchmarking/results_16bit/NVIDIA_GeForce_RTX_4090/: results.txt
media/: README.md
misc_scripts/: cubla_bench.cu  device_properties.cu  device_properties_modern.cu
misc_scripts/gpus/: NVIDIA_A100-SXM4-80GB  NVIDIA_GeForce_RTX_2080_SUPER  NVIDIA_GeForce_RTX_3090  NVIDIA_GeForce_RTX_4090  NVIDIA_H100_80GB_HBM3
python_scripts/: benchmark_runtime.py  benchmark_storage.py  e2e_llama_results.csv  e2e_results_parsing.ipynb  effective_density_visualization.ipynb  gen_mtx_matrices.ipynb  result_parsing.ipynb  util_compress_llm.py  util_run_pruned_llm.py
src/macko_spmv/: __init__.py
src/macko_spmv/cuda/: cpu_compressor.cuh  cpu_compressor_torch_launcher.cuh  kernels.cuh  kernels_torch_launchers.cuh
tests/: test_macko_spmv.py
