[project]
name = "macko-spmv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vlejd", email = "vladimir.v.macko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "numpy>=2.3.4",
    "torch==2.8.0",
    "transformers==4.55",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.package-data]
"*" = ["cuda/*"]
